Added CodePrefixes to Constants

--- a/Mockups/Mockups/Base.lproj/Main.storyboard
+++ b/Mockups/Mockups/Base.lproj/Main.storyboard
@@ -33,14 +33,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bio Life Tracker" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="35Z-uo-lmr">
-                                <rect key="frame" x="102" y="93" width="170" height="30"/>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
-                                </accessibility>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="50"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2HS-Kb-6aA">
                                 <rect key="frame" x="121" y="287" width="133" height="30"/>
                                 <state key="normal" title="Create New Project">
@@ -65,6 +57,14 @@
                                     <segue destination="CwV-GY-GDn" kind="presentation" id="YOs-tm-ROu"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Bio Life Tracker" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="35Z-uo-lmr">
+                                <rect key="frame" x="58" y="91" width="267" height="56"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
