--- a/Mockups/Mockups/Base.lproj/Main.storyboard
+++ b/Mockups/Mockups/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="0Lv-dE-ft9" kind="presentation" id="IUr-zQ-LuP"/>
+                                    <segue destination="0Lv-dE-ft9" kind="presentation" identifier="NewProject" id="IUr-zQ-LuP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pyi-1k-EOF">
@@ -69,6 +69,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="btnAllProjects" destination="L5Y-mu-VEi" id="Pl7-AZ-wVQ"/>
+                        <outlet property="btnCreateProject" destination="2HS-Kb-6aA" id="86n-GD-naX"/>
+                        <outlet property="btnLogin" destination="pyi-1k-EOF" id="S13-ah-zr4"/>
+                        <outlet property="displayProject" destination="oQx-qX-3cF" id="Vjn-nl-ve5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
@@ -155,7 +161,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Done" id="mQT-Cv-93d">
                             <connections>
-                                <segue destination="D9E-Up-27r" kind="presentation" id="0VO-vM-dgF"/>
+                                <segue destination="D9E-Up-27r" kind="presentation" identifier="ProjectHome" id="0VO-vM-dgF"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -175,6 +181,14 @@
                     <view key="view" contentMode="scaleToFill" id="SNz-gh-BIa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1KE-ol-r1z">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Observations" id="W9w-wR-Ajf"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Observe" id="2Sv-Yx-uLg"/>
